Fixed a case when search result would not be visible if the text was marked with yellow color.

--- a/packages/ckeditor5-find-and-replace/theme/findandreplace.css
+++ b/packages/ckeditor5-find-and-replace/theme/findandreplace.css
@@ -5,6 +5,7 @@
 
 .ck-find-result {
 	background: hsl(58, 100%, 50%);
+	color: var(--ck-color-text);
 }
 
 .ck-find-result_selected {
